# sugoi

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: continuous_integration.yml
libs/: CMakeLists.txt
libs/bzip2/: CMakeLists.txt
libs/lzma/: CMakeLists.txt
libs/miniz/: CMakeLists.txt
tools/: CMakeLists.txt
tools/zipdir/: CMakeLists.txt
wadsrc/: ANIMDEFS.airbase  ANIMDEFS.assetpack  ANIMDEFS.azure  ANIMDEFS.contaminated  ANIMDEFS.cosmic  ANIMDEFS.freedoom  ANIMDEFS.glaber  ANIMDEFS.glacier  ANIMDEFS.goldenhog  ANIMDEFS.kimokawaiii  ANIMDEFS.kodachrome  ANIMDEFS.midnight  ANIMDEFS.subarashii  ANIMDEFS.sugoi  ANIMDEFS.vada  CREDITS.txt  MAPC3MS.LMP  MUSICDEF.txt  TEXTURES.acidic  TEXTURES.bubbletides  TEXTURES.contaminated  TEXTURES.cosmic  TEXTURES.deleted  TEXTURES.freedoom  TEXTURES.gateway  TEXTURES.gfgrove  TEXTURES.glaber  TEXTURES.glacier  TEXTURES.goldenhog  TEXTURES.holidayhill  TEXTURES.kimokawaiii  TEXTURES.kodachrome  TEXTURES.manorhub  TEXTURES.midnight  TEXTURES.roykirbs  TEXTURES.utemple  TEXTURES.vada  init.lua
wadsrc/fades/: FADE6500.raw  FADE6501.raw  FADE6502.raw  FADE6503.raw  FADE6504.raw  FADE6505.raw  FADE6506.raw  FADE6507.raw  FADE6508.raw  FADE6509.raw  FADE6510.raw  FADE6511.raw  FADE6512.raw  FADE6513.raw  FADE6514.raw  FADE6515.raw  FADE6516.raw  FADE6517.raw  FADE6518.raw  FADE6519.raw  FADE6520.raw  FADE6521.raw  FADE6522.raw  FADE6523.raw  FADE6524.raw  FADE6525.raw  FADE6526.raw  FADE6600.raw  FADE6601.raw  FADE6602.raw  FADE6603.raw  FADE6604.raw  FADE6605.raw  FADE6606.raw  FADE6607.raw  FADE6608.raw  FADE6609.raw  FADE6610.raw  FADE6611.raw  FADE6612.raw  (+54 more)
wadsrc/flats/assetpack/: BIGEGGF.raw  BIGEXCF.raw  BIGQUESF.raw  BINGOF01.raw  BINGOF02.raw  BSBOXF1.raw  BSBOXF1B.raw  BSBOXF2.raw  BSBOXF2B.raw  BSBOXF3.raw  BSBOXF3B.raw  BSFLR1.raw  BSFLR1B.raw  BSFLR1C.raw  BSFLR1D.raw  BSFLR1DB.raw  BSFLR1E.raw  BSFLR1F.raw  BSFLR2.raw  BSFLR2B.raw  BSFLR2C.raw  BSFLR2D.raw  BSFLR2DB.raw  BSFLR2E.raw  BSFLR2F.raw  BSFLR4.raw  BSFLR4E.raw  BSFLR5.raw  BSFLR5B.raw  BSFLR5C.raw  BSFLR5D.raw  BSFLR5DB.raw  BSFLR5E.raw  BSFLR5F.raw  BSFLR6.raw  BSFLR6B.raw  BSFLR6C.raw  BSFLR6D.raw  BSFLR6DB.raw  BSFLR6E.raw  (+141 more)
wadsrc/flats/freedoom/: BLOOD1.raw  BLOOD2.raw  BLOOD3.raw  CEIL1_1.raw  CEIL1_2.raw  CEIL1_3.raw  CEIL3_2.raw  CEIL3_3.raw  CEIL3_4.raw  CEIL3_5.raw  CEIL3_6.raw  CEIL3_7.raw  CEIL4_1.raw  CEIL4_2.raw  CEIL4_3.raw  CEIL5_1.raw  CEIL5_2.raw  COMP01.raw  (+128 more)
wadsrc/graphics/: CONSBACK.lmp  GLTINTA2  GLTINTA3  GLTINTB3  GLTINTB5  GOTITJ.lmp  GOTITK.lmp  GOTITN.lmp  GOTITO  HELPM01.lmp  MSTATIC1.lmp  MSTATIC2.lmp  MSTATIC3.lmp  MSTATIC4.lmp  WIDEBLPK.lmp
wadsrc/lua/: sugoi_bossmeter.lua  sugoi_clears.lua  sugoi_credits.lua  sugoi_daycycle.lua  sugoi_defs.lua  sugoi_hub.lua  sugoi_hud.lua  sugoi_items.lua  sugoi_light.lua  sugoi_main.lua  sugoi_misc.lua  sugoi_panel.lua  sugoi_player.lua  sugoi_portal.lua  sugoi_save.lua  sugoi_shop.lua  sugoi_title.lua  sugoi_token.lua  sugoi_ui.lua  sugoi_unlock.lua  sugoi_vote.lua
wadsrc/maps/: MAP98.wad  MAP99.wad  MAPU1.wad  MAPU2.wad  MAPU3.wad  MAPU4.wad
wadsrc/music/: O_SHOP.it  O__1UP.mptm  O__CHSEL.it  O__CLEAR.it  O__CONTI.it  O__DROWN.it  O__GOVER.it  O__INTER.mptm  O__INV.it  O__NITAT.it  O__RECAT.it  O__SHOES.it  O__SUGOI.spc  O__TITLE.it
wadsrc/palettes/: CLM0001.cmp  CLM0034.cmp  CLM0050.cmp  CLM0051.cmp  CLM0073.cmp  CLM0300.cmp  PAL0021.pal  PAL0027.pal  PAL0034.pal  PAL0050.pal  PAL0051.pal  PAL0073.pal  PAL0099.pal  PAL0100.pal  PAL0300.pal
wadsrc/soc/: !0_main.soc  !1_vanilla.soc  !2_sugoi.soc  !3_subarashii.soc  !4_kimokawaiii-sidea.soc  !5_kimokawaiii-sideb.soc  abandonedairbase.soc  amtcrawla.soc  aos.soc  azureparadise.soc  bobo.soc  bother.soc  confleggrator.soc  contaminated-water.soc  cosmicvalley.soc  crimsoncastle.soc  cutscenes.soc  desolatewoods.soc  diamondvalley.soc  egg-flambe.soc  endoftime.soc  final-drtapeworm.soc  final-glaber.soc  final-vadapega.soc  fudgecanyon.soc  funkyheadquarters.soc  glaber-objs.soc  goldenhog-objs.soc  greenflowergrove.soc  greenflowers4.soc  holidayhill.soc  holidayhouse.soc  kimokawaiii-sideb.soc  lavenderworld.soc  lilac-bushes.soc  lilac-hivestatue.soc  lilac-hogan.soc  lilac-shotzo.soc  main.soc  midnightshores.soc  (+20 more)
wadsrc/sprites/: EMBMJ0  EMBMK0  EMBMN0  EMBMO0  HPNLA0  HPNLB0  HPNLC0  HPNLD0  HPNLE0  LEF1A0  LEF1B0  LEF1C0
wadsrc/textures/: CREDSTAR.lmp  HUBPANL1  HUBPANL2  SKY9292
(+10623 files in other folders)
